globus-gridftp-server (12.13-1+gt6.@distro@) @distro@; urgency=low

  * Fix data_node restrict path

 -- Globus Toolkit <support@globus.org>  Mon, 10 Sep 2018 10:53:58 -0400

globus-gridftp-server (12.12-1+gt6.@distro@) @distro@; urgency=low

  * log remote http connection address for legacy s3 transfers

 -- Globus Toolkit <support@globus.org>  Tue, 28 Aug 2018 11:32:25 -0500

globus-gridftp-server (12.11-1+gt6.@distro@) @distro@; urgency=low

  * log remote http connection address for legacy s3 transfers

 -- Globus Toolkit <support@globus.org>  Mon, 27 Aug 2018 16:26:14 -0500

globus-gridftp-server (12.10-1+gt6.@distro@) @distro@; urgency=low

  * use 2048 bit keys to support openssl 1.1.1

 -- Globus Toolkit <support@globus.org>  Fri, 24 Aug 2018 20:48:57 -0500

globus-gridftp-server (12.9-1+gt6.@distro@) @distro@; urgency=low

  * fix initscript non-lsb status return codes

 -- Globus Toolkit <support@globus.org>  Tue, 07 Aug 2018 18:58:17 -0500

globus-gridftp-server (12.8-1+gt6.@distro@) @distro@; urgency=low

  * fix daemon config parsing not catching env vars

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2018 16:22:05 -0500

globus-gridftp-server (12.7-1+gt6.@distro@) @distro@; urgency=low

  * force ipc encryption if server configuration requires
  * fix old ipc bug making it hard to diagnose racy connection failures

 -- Globus Toolkit <support@globus.org>  Fri, 13 Jul 2018 16:16:09 -0500

globus-gridftp-server (12.6-1+gt6.@distro@) @distro@; urgency=low

  * win: fix path restrictions on /

 -- Globus Toolkit <support@globus.org>  Fri, 15 Jun 2018 15:27:56 -0500

globus-gridftp-server (12.5-1+gt6.@distro@) @distro@; urgency=low

  * win32 fix

 -- Globus Toolkit <support@globus.org>  Wed, 07 Feb 2018 00:23:59 -0600

globus-gridftp-server (12.4-1+gt6.@distro@) @distro@; urgency=low

  * Improve search for user env in enable-sshftp script

 -- Globus Toolkit <support@globus.org>  Wed, 08 Nov 2017 09:55:26 -0500
