@@ -514,6 +514,8 @@ static const globus_l_gfs_config_option_t option_list[] =
     NULL, NULL, NULL,GLOBUS_FALSE, NULL}, /* allow LinuxThreads */
  {"bad_signal_exit", "bad_signal_exit", NULL, "exit", NULL, GLOBUS_L_GFS_CONFIG_BOOL, GLOBUS_TRUE, NULL,
     NULL, NULL, NULL,GLOBUS_FALSE, NULL}, /* exit cleanly on bad signals (no core dump) */
+ {"slow_dirlist", "slow_dirlist", NULL, NULL, NULL, GLOBUS_L_GFS_CONFIG_BOOL, GLOBUS_FALSE, NULL,
+    NULL, NULL, NULL,GLOBUS_FALSE, NULL}, /* tell DSI to try to avoid listing delays */
  {"test_acl", NULL, NULL, NULL, "testacl", GLOBUS_L_GFS_CONFIG_STRING, 0, NULL,
     NULL /* load and pass arguments to the test acl module. the string
         may include BLOCK, which will cause a failure in the callback,
